--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ instance/*
 !instance/.gitignore
 .webassets-cache
 
+### Tests ###
+tests/*
+tests/
+
 ### Flask.Python Stack ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
