--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=flask
 
 
-### Tests ###
-local_db/
+### db local ###
+/local_db/
 
 ### Tests ###
 tests/
@@ -153,4 +153,4 @@ dmypy.json
 # profiling data
 .prof
 
-# End of https://www.toptal.com/developers/gitignore/api/flask
+
